--- a/style.css
+++ b/style.css
@@ -2,5 +2,8 @@
 #banner {
   color: navy;
   text-align: center;
-  border-bottom: 3px solid red;
+}
+
+table, th, td {
+  border: 1px solid black;
 }
