--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 
 #banner {
-  color: navy;
-  text-align: center;
+    color: white;
+    font-size: 35px;
+    text-align: center;
+    background: blue;
 }
 
-table, th, td {
-  border: 1px solid black;
+.welcome {
+  text-transform: uppercase;
+}
+
+table {
+  background-color: beige;
+  font-family: monospace;
 }
